# pylinode

./: .gitignore  pyproject.toml  readme.md
math/: linear-ode-solution.lyx
src/: pylinode.py
tests/: test_solve_ode.py
